@@ -1,4 +1,4 @@
-#!/usr/local/bin/perl5
+#!/usr/local/bin/perl
 
 
 # Perl c_rehash script, scan all files in a directory
